--- a/src/autocomplete/components/input.css
+++ b/src/autocomplete/components/input.css
@@ -1,10 +1,9 @@
 .container {
-  background: #fff;
   border: 1px solid #dde5eb;
   display: flex;
   border-radius: 5px;
 }
-.active {
+.container.active {
   border-radius: 5px 5px 0 0;
 }
 .searchIcon {
