--- a/src/autocomplete/components/item.css
+++ b/src/autocomplete/components/item.css
@@ -6,7 +6,6 @@
   border-bottom: 1px solid #dde5eb;
   padding: 14px 32px;
 }
-
-.active {
+.item.active {
   background: rgba(234, 239, 243, 0.5);
 }
