--- a/src/autocomplete/components/list.css
+++ b/src/autocomplete/components/list.css
@@ -4,6 +4,24 @@
   border: 1px solid #dde5eb;
   margin-top: -1px;
   border-radius: 0px 0px 5px 5px;
-  max-height: 220px;
+  max-height: 230px;
   overflow-y: scroll;
+  box-shadow: 0 5px 13px -2px rgba(0, 0, 0, 0.1);
+}
+.list::-webkit-scrollbar {
+  opacity: 0.5;
+  width: 6px;
+}
+.list::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+.list::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.noResults {
+  color: #465166;
+  font-size: 16px;
+  padding: 14px 32px;
 }
